objects/ASI_MFM_POSMCatalogSecCtrl__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Brand__c</fullName>
        <formula>ASI_MFM_ItemGroup__r.ASI_MFM_Sub_brand__r.ASI_MFM_Brand__r.ASI_CRM_CN_Chinese_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_CanOrderinCatalog__c</fullName>
        <label>Can Order in Catalog</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Category_Level_1__c</fullName>
        <formula>ASI_MFM_ItemGroup__r.ASI_MFM_Category_Level_1__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Level 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Category_Level_2__c</fullName>
        <formula>ASI_MFM_ItemGroup__r.ASI_MFM_Category_Level_2__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Level 2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Category_Level_3__c</fullName>
        <formula>ASI_MFM_ItemGroup__r.ASI_MFM_Category_Level_3__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Category Level 3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Inventory_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>POSM_Catalog_Security_Controls_Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ItemGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Item Group</label>
        <referenceTo>ASI_MFM_Item_Group__c</referenceTo>
        <relationshipLabel>POSM Catalog Security Controls</relationshipLabel>
        <relationshipName>POSM_Catalog_Security_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_MappingType__c</fullName>
        <label>Mapping Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Item Group - User</fullName>
                </value>
                <value>
                    <fullName>Warehouse - User</fullName>
                </value>
                <value>
                    <fullName>Inventory Owner - User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_MFM_Open_to_all_user__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open to all user</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region</label>
        <referenceTo>ASI_CRM_Region__c</referenceTo>
        <relationshipLabel>POSM Catalog Security Controls</relationshipLabel>
        <relationshipName>POSM_Catalog_Security_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand__c</fullName>
        <formula>ASI_MFM_ItemGroup__r.ASI_MFM_Sub_brand__r.ASI_CRM_CN_CHI_NAME_C__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>POSM_Catalog_Security_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Warehouse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Warehouse</label>
        <referenceTo>ASI_FOC_Warehouse__c</referenceTo>
        <relationshipLabel>POSM Catalog Security Controls</relationshipLabel>
        <relationshipName>POSM_Catalog_Security_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>POSM Catalog Security Control</label>
    <listViews>
        <fullName>POSM_Catalog_Security_Controls_Central</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Region__c</columns>
        <columns>ASI_MFM_Warehouse__c</columns>
        <columns>ASI_MFM_ItemGroup__c</columns>
        <columns>ASI_MFM_User__c</columns>
        <columns>ASI_MFM_CanOrderinCatalog__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Region__c</field>
            <operation>equals</operation>
            <value>South Region,South West Region</value>
        </filters>
        <label>POSM Catalog Security Controls-GS</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN_Regional_VP_Greater_South_China</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>POSM_Catalog_Security_Controls_Central1</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Region__c</columns>
        <columns>ASI_MFM_Warehouse__c</columns>
        <columns>ASI_MFM_ItemGroup__c</columns>
        <columns>ASI_MFM_User__c</columns>
        <columns>ASI_MFM_CanOrderinCatalog__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Region__c</field>
            <operation>equals</operation>
            <value>East Region</value>
        </filters>
        <label>POSM Catalog Security Controls-East</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN_Regional_VP_Greater_East_China</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>POSM_Catalog_Security_Controls_Central2</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Region__c</columns>
        <columns>ASI_MFM_Warehouse__c</columns>
        <columns>ASI_MFM_ItemGroup__c</columns>
        <columns>ASI_MFM_User__c</columns>
        <columns>ASI_MFM_CanOrderinCatalog__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_POSMCatalogSecCtrl__c.ASI_MFM_CN_POSM</value>
        </filters>
        <filters>
            <field>ASI_MFM_Region__c</field>
            <operation>contains</operation>
            <value>Central</value>
        </filters>
        <label>POSM Catalog Security Controls-Central</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN_Regional_VP_Greater_Central_China</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>POSM_Catalog_Security_Controls_North</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Region__c</columns>
        <columns>ASI_MFM_Warehouse__c</columns>
        <columns>ASI_MFM_ItemGroup__c</columns>
        <columns>ASI_MFM_User__c</columns>
        <columns>ASI_MFM_CanOrderinCatalog__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Region__c</field>
            <operation>equals</operation>
            <value>North Region</value>
        </filters>
        <label>POSM Catalog Security Controls-North</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN_Regional_VP_North_China</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>POSM_Catalog_Security_Controls_NorthWest</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Region__c</columns>
        <columns>ASI_MFM_Warehouse__c</columns>
        <columns>ASI_MFM_ItemGroup__c</columns>
        <columns>ASI_MFM_User__c</columns>
        <columns>ASI_MFM_CanOrderinCatalog__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_Region__c</field>
            <operation>equals</operation>
            <value>North West Region</value>
        </filters>
        <filters>
            <field>ASI_MFM_User__c</field>
            <operation>contains</operation>
            <value>Erin</value>
        </filters>
        <label>POSM Catalog Security Controls-NorthWest</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN_Regional_VP_North_West_China</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>POSM_Catalog_search_Frank</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Region__c</columns>
        <columns>ASI_MFM_Warehouse__c</columns>
        <columns>ASI_MFM_ItemGroup__c</columns>
        <columns>ASI_MFM_User__c</columns>
        <columns>ASI_MFM_CanOrderinCatalog__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ASI_MFM_MappingType__c</field>
            <operation>equals</operation>
            <value>Warehouse - User</value>
        </filters>
        <filters>
            <field>ASI_MFM_User__c</field>
            <operation>equals</operation>
            <value>echo xie</value>
        </filters>
        <label>POSM Catalog search-Frank</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>ASI_CN_Regional_VP_Greater_South_China</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PCSC{00000000}</displayFormat>
        <label>Control Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POSM Catalog Security Controls</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CN_POSM</fullName>
        <active>true</active>
        <label>CN POSM</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>